# osc-interaction

./: Cargo.toml  README.md
config/: config.toml
src/: cli.rs  client.rs  config.rs  main.rs  traits.rs
src/features/: mod.rs  proc.rs  spotify.rs
src/utils/: cli.rs
