[package]
name = "osc-interaction"
author = "Wakeland Branz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.10.1"

log = "0.4.20"
env_logger = "0.11.3"
chrono = "0.4.33"
sysinfo = "0.30.6"

serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"